--- a/general/templates/general/about.html
+++ b/general/templates/general/about.html
@@ -12,7 +12,12 @@
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+  <script>
+      window.onload = function () {
+          console.log('loaded')
+          window.scrollTo(0, 0);
+      }
+  </script>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -30,44 +35,87 @@
 <body>
 <div id="app">
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light" style="padding-top:0; padding-bottom:0">
-    <a class="navbar-brand abs" href="#" style="padding-top:0; padding-bottom:0;"><img src="static/images/berl-icon.png" width="30" height="30"></a>
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'about' %}">About</a>
-      </li>
-    </ul>
-  </nav>
+
+
+
 
 
   <section class="full-screen-section flexxing" id="about-section">
+    <nav class="navbar navbar-expand-lg">
+      <a class="navbar-brand abs" href="#"><img src="static/images/berl-icon.png" width="30" height="30"></a>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'about' %}">About</a>
+        </li>
+      </ul>
+    </nav>
     <div style="margin-left:3%; margin-right:3%;">
-          <p id="about-text" style="text-align:center; text-align: justify;">
+          <p class="about-text">
               Hi! My name is Tristan and I'm the developer of berl-eat. The idea for this project was born when I moved together with with my girlfriend to Berlin at the beginning of the year. We were overwhelmed by the enormous number of incredibly good restaurants! Since we wanted to visit the best places first, we did some research and ended up with a very very long list of places to choose from. Therefore I built a small program to pick a restaurant for us based on the cuisine whe would like to have and the location of the restaurant. I thought that such a gadget could certainly be useful to other people as well. For example if you find yourself in a not well known district and you don't want to scroll through endless google maps entries first to find a place to eat. Personally, I'm not a web developer at all, so the website is far from being perfect and there are certainly lots of developers who could have done a better job. But that's not what this is about, it's about having a good time with a good meal in this great city.
           </p>
-          <p id="about-text" style="text-align:center; text-align: justify;">
+          <p class="about-text">
               If I like a restaurant in particular I try to write a short comment on my own but in any case I link the homepage of the restaurant and mark its position in GoogleMaps and put the link up as well.
               Of course, this is not an in-depth restaurant guide for Berlin by any means. There are a lot of awesome websites which do this already, like 'mitVergnügen.de' or 'tripadvisor'. This is just a small gadget for you to pick a nice place if you don't want to have to think too much.
           </p>
-          <p id="about-text" style="text-align:center; text-align: justify;">
+          <p class="about-text">
               I don't get any sponsoring or money for this, so these suggestions are based only on recommendations or my own experiences.  If you know a nice place or are an owner yourself please do not hesistate to drop me an email and I will be happy to test and also add your place.
           </p>
-          <p id="about-text" style="text-align:center; text-align: justify;">
+          <p class="about-text">
               So much from me, happy restaurant testing, have a nice meal and an even nicer time,
           </p>
-          <p id="about-text" style="text-align:center; text-align: justify;">
+          <p class="about-text">
               Tristan
           </p>
     </div>
   </section>
 
+  <hr>
+  <section id="contactSection" class="full-screen-section flexxing">
 
+      <div class="row">
+        <div class="col-lg-1">
+        </div>
+        <div class="col-lg-10 contact-form">
+          <p id="dropMailJumbo">
+            If you have questions, recommendations or any other sort of thoughts you want so share with me, please drop me an email. I would love to get in contact with you!
+          </p>
+          <form action="" method="post">
+            {% csrf_token %}
+              <div class="row">
+                  <div class="col-lg-6">
+                      {{ form.visitor_name.label }}
+                      {{ form.visitor_name }}
+                  </div>
+                  <div class="col-lg-6">
+                      {{ form.visitor_email.label }}
+                      {{ form.visitor_email }}
+                  </div>
+                  <div class="col-lg-12">
+                      {{ form.visitor_subject.label }}
+                      {{ form.visitor_subject }}
+                  </div>
+                  <div class="col-lg-12">
+                      {{ form.visitor_message.label }}
+                      {{ form.visitor_message }}
+                  </div>
+                  <button id="send-contact-form-button" type="submit">Send Message</button>
+              </div>
+          </form>
+        </div>
+        <div class="col-lg-1">
+        </div>
+      </div>
+
+  </section>
 
   <footer class="footer">
     <div class="text-center py-3">
       <p class="text-muted">© 2020 Copyright:Tristan Kast</p>
       <p class="text-muted">
          <a class="footer-link" href="https://icons8.com/icon/41494/berliner-fernsehturm">Berliner Fernsehturm icon by Icons8</a> | <span>Berlin Title Photo by <a class="footer-link" href="https://unsplash.com/@purzlbaum?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText"> Claudio Schwarz | @purzlbaum</a> on <a class="footer-link" href="https://unsplash.com/s/photos/berlin?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+      </p>
+      <p class="text-muted">
+         <a class="footer-link" href="{% url 'about' %}"> Privacy </a><span> | </span><a class="footer-link" href="{% url 'about' %}"> Imprint </a>
       </p>
     </div>
   </footer>
