--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -1,3 +1,8 @@
+html{
+	scroll-behavior: smooth;
+	scroll-snap-type: y mandatory;
+}
+
 .contact-form form input {
 	width: 100%;
 	height: 51px;
@@ -16,38 +21,26 @@
 	margin-bottom: 2em;
 	resize: none;
 }
-.orange-button{
-	font-size: 14px;
-	color: #ffffff;
-	padding: 1em 3em;
-	display: inline-block;
-	background: -webkit-gradient(linear, left top, right top, from(#eb3c5a), to(#f67831));
-	background: -o-linear-gradient(left, #eb3c5a, #f67831);
-	background: linear-gradient(to right, #eb3c5a, #f67831);
-	border: none;
-	text-transform: uppercase;
-}
-.orange-link{
-	-webkit-appearance: button;
-	-moz-appearance: button;
-	appearance: button;
-	font-size: 14px;
-	color: #ffffff;
-	padding: 1em 3em;
-	display: inline-block;
-	background: -webkit-gradient(linear, left top, right top, from(#eb3c5a), to(#f67831));
-	background: -o-linear-gradient(left, #eb3c5a, #f67831);
-	background: linear-gradient(to right, #eb3c5a, #f67831);
-	border: none;
-	text-transform: uppercase;
-}
-
 .infoLink-button{
 	margin-top: 1em;
 	margin-bottom: 1em;
 }
-
 .link-logo-container{
+	margin:auto;
+	padding-top: 3%;
+	padding-bottom: 3%;
+}
+
+#send-contact-form-button{
+	font-size: 14px;
+	color: #ffffff;
+	padding: 1em 3em;
+	display: inline-block;
+	background: -webkit-gradient(linear, left top, right top, from(#eb3c5a), to(#f67831));
+	background: -o-linear-gradient(left, #eb3c5a, #f67831);
+	background: linear-gradient(to right, #eb3c5a, #f67831);
+	border: none;
+	text-transform: uppercase;
 	margin:auto;
 }
 
@@ -58,11 +51,43 @@
 	background-position: center;
 	background-attachment: fixed;
 
+	position:relative;
 }
-#suggestionJumbo{font-family:'Montserrat',serif;font-size:84px;}
-#more-info-text{font-family:'Montserrat',serif;font-size:28px;}
-#dropMailJumbo{font-family:'Montserrat',serif;font-size:40px;}
-#suggestionReview{font-family:'Montserrat',serif;font-size:22px;}
+
+#suggestionSection{
+	 position:relative;
+}
+
+#suggestionJumbo{
+	font-family:'Montserrat',serif;
+	font-size:84px;
+	text-align:center;
+}
+
+#link-row{
+	width:100%;
+}
+
+#suggestionReview-container{
+	margin-left:4%;
+	margin-right:4%;
+	hyphens: auto;
+	text-align: justify;
+}
+
+#more-info-text{
+	font-family:'Montserrat',serif;
+	font-size:28px;}
+
+#dropMailJumbo{
+	font-family:'Montserrat',serif;
+	font-size:40px;
+	text-align:center}
+
+#suggestionReview{
+	font-family:'Montserrat',serif;
+	font-size:22px;}
+
 #embeddedMap{
 	border:0;
 	height:100%;
@@ -86,13 +111,24 @@
 	#dropMailJumbo{
 		margin-left: 1em;
 		margin-right: 1em;
-    font-size:40px;
+
 	}
+	#suggestionJumbo{
+		font-size:64px;
+	}
+
+	#second-navbar{
+		visibility: hidden;
+	}
+
 }
 
 /* For desktop screens */
 @media only screen and (min-width:991px){
 	#dropMailJumbo{
 		padding-bottom: 2em;
+	}
+	.selection-dropdown{
+		width: 110%;
 	}
 }
