Replaced vue.js with vanialla js

--- a/general/templates/general/about.html
+++ b/general/templates/general/about.html
@@ -51,14 +51,30 @@
     </nav>
     <div style="margin-left:3%; margin-right:3%;">
           <p class="about-text">
-              Hi! My name is Tristan and I'm the developer of berl-eat. The idea for this project was born when I moved together with with my girlfriend to Berlin at the beginning of the year. We were overwhelmed by the enormous number of incredibly good restaurants! Since we wanted to visit the best places first, we did some research and ended up with a very very long list of places to choose from. Therefore I built a small program to pick a restaurant for us based on the cuisine whe would like to have and the location of the restaurant. I thought that such a gadget could certainly be useful to other people as well. For example if you find yourself in a not well known district and you don't want to scroll through endless google maps entries first to find a place to eat. Personally, I'm not a web developer at all, so the website is far from being perfect and there are certainly lots of developers who could have done a better job. But that's not what this is about, it's about having a good time with a good meal in this great city.
+              Hi! My name is Tristan and I'm the developer of berl-eat. 
+              The idea for this project was born when I moved together with with my girlfriend to Berlin at the beginning of the year. 
+              We were overwhelmed by the enormous number of incredibly good restaurants! 
+              Since we wanted to visit the best places first, we did some research and ended up with a very very long list of places to choose from. 
+              Therefore I built a small program to pick a restaurant for us based on the cuisine whe would like to have and the location of the restaurant. 
+              I thought that such a gadget, including the list beneath would be a nice way of documenting our experiences
+              with these places and could certainly be useful to other people as well. 
+              For example if you find yourself in a not well known district and you don't want to scroll 
+              through endless google maps entries first to find a nice place to eat, that is veriefied by me. 
+              Personally, I'm not a web developer at all, so the website is far from being perfect 
+              and there are certainly lots of developers who could have done a better job. 
+              But that's not what this is about, it's about having a good time with a good meal in this great city.
           </p>
           <p class="about-text">
-              If I like a restaurant in particular I try to write a short comment on my own but in any case I link the homepage of the restaurant and mark its position in GoogleMaps and put the link up as well.
-              Of course, this is not an in-depth restaurant guide for Berlin by any means. There are a lot of awesome websites which do this already, like 'mitVergnügen.de' or 'tripadvisor'. This is just a small gadget for you to pick a nice place if you don't want to have to think too much.
+              If I checked a restaurant out I try to write a short comment on my own 
+              but in any case I link the homepage of the restaurant and mark its position in GoogleMaps.
+              Of course, this is not an in-depth restaurant guide for Berlin by any means. 
+              There are a lot of awesome websites which do this already, like 'mitVergnügen.de' or 'tripadvisor'. 
+              This is just a small gadget for you to pick a nice place if you don't want to have to think too much.
           </p>
           <p class="about-text">
-              I don't get any sponsoring or money for this, so these suggestions are based only on recommendations or my own experiences.  If you know a nice place or are an owner yourself please do not hesistate to drop me an email and I will be happy to test and also add your place.
+              I don't get any sponsoring or money for this, so these suggestions are based only on recommendations or my own experiences.  
+              If you know a nice place or are an owner yourself please do not hesistate to drop me an email 
+              and I will be happy to test and also add your place.
           </p>
           <p class="about-text">
               So much from me, happy restaurant testing, have a nice meal and an even nicer time,
