--- a/general/templates/general/landing.html
+++ b/general/templates/general/landing.html
@@ -10,10 +10,14 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js">
-  </script>
-  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js">
-  </script>
+  <script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
+  <!--<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js">
+  </script>-->
+  <!--<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js">
+  </script>-->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
   </script>
 
@@ -48,7 +52,7 @@
 
   <section class="full-screen-section full-screen-mobile flexxing" id="landingSection">
     <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand abs" href="#"><img src="static/images/berl-icon.png" width="30" height="30"></a>
+      <a class="navbar-brand abs" href="#"><img src="/static/images/berl-icon.png" width="30" height="30"></a>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" href="{% url 'about' %}">About</a>
@@ -62,7 +66,6 @@
             <label for="mealTime-select">I want to have:</label>
             <select class="form-control" id="mealTime-select" v-model="mealTime">
               <option selected>Good Food</option>
-              <option v-for="option in mealTime_list" :value="option">[[option]]</option>
             </select>
           </div>
         </div>
@@ -71,7 +74,6 @@
             <label for="district-select">Somewhere in:</label>
             <select class="form-control" id="district-select" v-model="district">
               <option select>Complete Berlin</option>
-              <option v-for="option in district_list" :value="option">[[option]]</option>
             </select>
           </div>
         </div>
@@ -80,7 +82,6 @@
             <label for="cuisine-select">My prefered cuisine:</label>
             <select class="form-control" id="cuisine-select" v-model="cuisine">
               <option select>Tasty</option>
-              <option v-for="option in cuisine_list" :value="option">[[option]]</option>
             </select>
           </div>
         </div>
@@ -89,7 +90,6 @@
             <label for="extra-select">I'd love to have:</label>
             <select class="form-control" id="extra-select" v-model="extra">
               <option selected>A nice Time</option>
-              <option v-for="option in special_list" :value="option">[[option]]</option>
             </select>
           </div>
         </div>
@@ -103,15 +103,14 @@
     </div>
   </section>
 
-
-
-  <section id="suggestionSection" v-bind:class="{ 'full-screen-mobile': restaurantSuggestion }" class="flexxing">
-    <nav id="second-navbar" class="second-navbar navbar-expand-lg"  v-if="restaurantLinks">
+  <hr id="sugg-section-splitter">
+  <section id="suggestionSection" class="flexxing">
+    <!-- <nav id="second-navbar" class="second-navbar navbar-expand-lg">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="#suggestionSection">Suggestion</a>
           </li>
-          <li class="nav-item" v-if="restaurantSuggestion['review']">
+          <li class="nav-item" id="suggestion-review" v-if="restaurantSuggestion['review']">
             <a class="nav-link" href="#restaurantSuggestionReview">Comment</a>
           </li>
           <li class="nav-item">
@@ -124,64 +123,65 @@
             <a class="nav-link" href="#contactSection">Contact</a>
           </li>
         </ul>
-    </nav>
-    <div>
+    </nav> -->
+    <div id="suggestion">
       <div id="suggestionJumbo">
-        <p id="suggestionName">[[restaurantSuggestion.name]]</p>
-        <p id="suggestionDistrict">[[restaurantSuggestion.district]]</p>
+        <p id="suggestionName"></p>
+        <p id="suggestionDistrict"></p>
       </div>
     </div>
-  </section>
 
-  <hr v-if="restaurantLinks">
-  <section class="flexxing" id="restaurantLinks" v-show="restaurantLinks">
+      <!--<hr v-if="restaurantLinks">-->
+  <div class="flexxing" id="restaurantLinks">
     <div class="row" id="link-row">
-      <div :class="restaurantLinks_colTag" v-show="restaurantSuggestion['homepage']" class="link-logo-container flexxing">
-        <a :href="restaurantSuggestion['homepage']" role="button" aria-disabled="true">
+      <div id="homepageLinkDiv"  class="link-logo-container flexxing">
+        <a role="button" aria-disabled="true">
           <img alt="Homepage" src="static/images/logo_homepage.png" width="80" height="80">
         </a>
       </div>
-      <div :class="restaurantLinks_colTag" v-show="restaurantSuggestion['mVLink']" class="link-logo-container flexxing">
-        <a :href="restaurantSuggestion['mVLink']" role="button" aria-disabled="true">
+      <div id="mvLinkDiv"  class="link-logo-container flexxing">
+        <a role="button" aria-disabled="true">
           <img alt="mitVergnuegen" src="static/images/logo_MitVergnuegen.png" width="80" height="80">
         </a>
       </div>
-      <div :class="restaurantLinks_colTag" v-show="restaurantSuggestion['tripadvisorLink']" class="link-logo-container flexxing">
-        <a :href="restaurantSuggestion['tripadvisorLink']" role="button" aria-disabled="true">
+      <div id="taLinkDiv"  class="link-logo-container flexxing">
+        <a role="button" aria-disabled="true">
           <img alt="Tripadvisor" src="static/images/logo_tripadvisor.png" width="80" height="80">
         </a>
       </div>
-      <div :class="restaurantLinks_colTag" v-show="restaurantSuggestion['facebookLink']" class="link-logo-container flexxing">
-        <a :href="restaurantSuggestion['facebookLink']" role="button" aria-disabled="true">
+      <div id="fbLinkDiv"  class="link-logo-container flexxing">
+        <a role="button" aria-disabled="true">
           <img alt="Facebook" src="static/images/logo_fb.png" width="80" height="80">
         </a>
       </div>
-      <div :class="restaurantLinks_colTag" v-show="restaurantSuggestion['instagramLink']" class="link-logo-container flexxing">
-        <a :href="restaurantSuggestion['instagramLink']" role="button" aria-disabled="true">
+      <div id="igLinkDiv"  class="link-logo-container flexxing">
+        <a role="button" aria-disabled="true">
           <img alt="Instagram" src="static/images/logo_ig.png" width="80" height="80">
         </a>
       </div>
     </div>
+  </div>
   </section>
 
-  <hr v-if="restaurantSuggestion['review']">
-  <section class="full-screen-section flexxing" id="restaurantSuggestionReview" v-show="restaurantSuggestion['review']">
+
+
+  <!--<hr v-if="restaurantSuggestion['review']">-->
+  <section class="full-screen-section flexxing" id="restaurantSuggestionReview">
     <div id="suggestionReview-container">
           <p id="suggestionReview">
-            [[review]]
           </p>
     </div>
   </section>
 
-  <hr v-show="restaurantSuggestion['googleMapsLink']">
-  <section class="full-screen-mobile flexxing" id="mapSection" v-show="restaurantSuggestion['googleMapsLink']">
+  <!--<hr v-show="restaurantSuggestion['googleMapsLink']">-->
+  <section class="full-screen-mobile flexxing" id="mapSection">
     <div class="container-fluid fill flexxing">
-        <iframe v-bind:src=[[restaurantSuggestion['googleMapsLink']]] id="embeddedMap" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <iframe id="embeddedMap" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
   </section>
 
   <hr>
-  <section id="contactSection" class="full-screen-section flexxing" v-if="showContactForm">
+  <section id="contactSection" class="full-screen-section flexxing">
 
       <div class="row">
         <div class="col-lg-1">
@@ -219,7 +219,7 @@
 
   </section>
 
-  <footer class="footer">
+  <footer class="footer" id="footer">
     <div class="text-center py-3">
       <p class="text-muted">© 2020 Copyright:Tristan Kast</p>
       <p class="text-muted">
@@ -233,7 +233,7 @@
 
 </div>
 
-<script type="module" src="{% static 'js/general.js' %}"></script>
+<script type="module" src="{% static 'js/general2.js' %}"></script>
 
 
 
