--- a/general/templates/general/landing.html
+++ b/general/templates/general/landing.html
@@ -14,10 +14,6 @@
   src="https://code.jquery.com/jquery-3.5.1.min.js"
   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
   crossorigin="anonymous"></script>
-  <!--<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js">
-  </script>-->
-  <!--<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js">
-  </script>-->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
   </script>
 
@@ -144,17 +140,17 @@
           <img alt="mitVergnuegen" src="static/images/logo_MitVergnuegen.png" width="80" height="80">
         </a>
       </div>
-      <div id="taLinkDiv"  class="link-logo-container flexxing">
+      <div id="tripadvisorLinkDiv"  class="link-logo-container flexxing">
         <a role="button" aria-disabled="true">
           <img alt="Tripadvisor" src="static/images/logo_tripadvisor.png" width="80" height="80">
         </a>
       </div>
-      <div id="fbLinkDiv"  class="link-logo-container flexxing">
+      <div id="facebookLinkDiv"  class="link-logo-container flexxing">
         <a role="button" aria-disabled="true">
           <img alt="Facebook" src="static/images/logo_fb.png" width="80" height="80">
         </a>
       </div>
-      <div id="igLinkDiv"  class="link-logo-container flexxing">
+      <div id="instagramLinkDiv"  class="link-logo-container flexxing">
         <a role="button" aria-disabled="true">
           <img alt="Instagram" src="static/images/logo_ig.png" width="80" height="80">
         </a>
@@ -165,7 +161,7 @@
 
 
 
-  <!--<hr v-if="restaurantSuggestion['review']">-->
+  <hr id="sugg-review-splitter">
   <section class="full-screen-section flexxing" id="restaurantSuggestionReview">
     <div id="suggestionReview-container">
           <p id="suggestionReview">
@@ -233,7 +229,7 @@
 
 </div>
 
-<script type="module" src="{% static 'js/general2.js' %}"></script>
+<script type="module" src="{% static 'js/general.js' %}"></script>
 
 
 
