deleted not used libs

--- a/general/templates/general/about.html
+++ b/general/templates/general/about.html
@@ -9,15 +9,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script> -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script>
+  <!-- <script>
       window.onload = function () {
           console.log('loaded')
           window.scrollTo(0, 0);
       }
-  </script>
+  </script> -->
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -52,9 +52,9 @@
     <div style="margin-left:3%; margin-right:3%;">
           <p class="about-text">
               Hi! My name is Tristan and I'm the developer of berl-eat. 
-              The idea for this project was born when I moved together with with my girlfriend to Berlin at the beginning of the year. 
+              The idea for this project was born when I moved together with with my girlfriend to Berlin at the beginning of 2020. 
               We were overwhelmed by the enormous number of incredibly good restaurants! 
-              Since we wanted to visit the best places first, we did some research and ended up with a very very long list of places to choose from. 
+              Since we wanted to visit the best places first, we did some research and ended up with a impressively long list of places to choose from. 
               Therefore I built a small program to pick a restaurant for us based on the cuisine whe would like to have and the location of the restaurant. 
               I thought that such a gadget, including the list beneath would be a nice way of documenting our experiences
               with these places and could certainly be useful to other people as well. 
@@ -62,10 +62,11 @@
               through endless google maps entries first to find a nice place to eat, that is veriefied by me. 
               Personally, I'm not a web developer at all, so the website is far from being perfect 
               and there are certainly lots of developers who could have done a better job. 
-              But that's not what this is about, it's about having a good time with a good meal in this great city.
+              But that's not what this is about. This is a hobby project of mine, which could be usefull for others. 
+              So please have a good time with a good meal in this great city.
           </p>
           <p class="about-text">
-              If I checked a restaurant out I try to write a short comment on my own 
+              If I have been to a restaurant, I try to write a short comment on my own 
               but in any case I link the homepage of the restaurant and mark its position in GoogleMaps.
               Of course, this is not an in-depth restaurant guide for Berlin by any means. 
               There are a lot of awesome websites which do this already, like 'mitVergnügen.de' or 'tripadvisor'. 
@@ -139,7 +140,7 @@
 
 </div>
 
-<script src="{% static 'js/general.js' %}"></script>
+<!-- <script src="{% static 'js/general.js' %}"></script> -->
 
 
 
