--- a/general/templates/general/landing.html
+++ b/general/templates/general/landing.html
@@ -135,7 +135,7 @@
           <img alt="Homepage" src="static/images/logo_homepage.png" width="80" height="80">
         </a>
       </div>
-      <div id="mvLinkDiv"  class="link-logo-container flexxing">
+      <div id="mVLinkDiv"  class="link-logo-container flexxing">
         <a role="button" aria-disabled="true">
           <img alt="mitVergnuegen" src="static/images/logo_MitVergnuegen.png" width="80" height="80">
         </a>
