--- a/static/css/base.css
+++ b/static/css/base.css
@@ -119,6 +119,38 @@ a:active
   text-align: center;
 }
 
+.contact-form form input {
+	width: 100%;
+	height: 51px;
+	border: 1px solid #e1e1e1;
+	padding-left: 2em;
+	font-size: 16px;
+	margin-bottom: 3em;
+}
+.contact-form form textarea {
+	width: 100%;
+	height: 150px;
+	border: 1px solid #e1e1e1;
+	padding-left: 2em;
+	font-size: 16px;
+	padding-top: 1em;
+	margin-bottom: 2em;
+	resize: none;
+}
+
+#send-contact-form-button{
+	font-size: 14px;
+	color: #ffffff;
+	padding: 1em 3em;
+	display: inline-block;
+	background: -webkit-gradient(linear, left top, right top, from(#eb3c5a), to(#f67831));
+	background: -o-linear-gradient(left, #eb3c5a, #f67831);
+	background: linear-gradient(to right, #eb3c5a, #f67831);
+	border: none;
+	text-transform: uppercase;
+	margin:auto;
+}
+
 
 
 /* For desktop screens */
@@ -126,4 +158,9 @@ a:active
 	.full-screen-section{height:100vh;}
 	.quarter-screen-section{height:25vh;}
 	.half-screen-section{height:50vh;}
+
+	.contact-form form{
+		padding-left: 3em;
+		padding-right: 3em;
+	}
 }
