--- a/general/templates/general/about.html
+++ b/general/templates/general/about.html
@@ -80,7 +80,7 @@
   </section>
 
 
-  <hr>
+  <!--<hr>
   <section id="contactSection" class="full-screen-section flexxing">
 
       <div class="row">
@@ -117,7 +117,7 @@
         </div>
       </div>
 
-  </section>
+  </section>-->
 
   <footer class="footer">
     <div class="text-center py-3">
